1- added gitignore 2-example description

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -10,6 +10,29 @@
     "\n",
     "Each example highlights the usage of specific functions or classes from the provided Python files, offering insights into real-world applications. Follow along to see how these implementations can streamline your coding processes and solve common programming challenges. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Draw Polygone on the map\n",
+    "\n",
+    "In this example, a map of a specific region is plotted. By activating the interactive mode, you can define points on the targeted region of the map through right-clicking. To complete the polygon, simply right-click again. If you need to clear the polygon, you can do so by double-clicking.\n",
+    "\n",
+    "Tips for Activating Interactive Plotting in Different IDEs:\n",
+    "\n",
+    "VS Code or Jupyter Notebook:\n",
+    "\n",
+    "1) Ensure that IPYMPL is installed: [IPYMPL Package](https://pypi.org/project/ipympl/)\n",
+    "2) Add %matplotlib widget and %matplotlib inline before importing your libraries.\n",
+    "3) It’s also useful to include plt.ion() for enabling interactive mode.\n",
+    "\n",
+    "Spyder:\n",
+    "\n",
+    "1) Go to Tools -> Preferences.\n",
+    "2) Navigate to IPython Console from the menu, then go to the Graphics tab.\n",
+    "3) Set the Graphics backend to either Qt or tk."
+   ]
   }
  ],
  "metadata": {
